Gros travail de mise en place des alertes pour les évènements + changement url crapi

--- a/app_client/about/about.view.html
+++ b/app_client/about/about.view.html
@@ -7,7 +7,7 @@
 <!-- <p>On pourra évoquer aussi nos valeurs dans cette 1ere présentation</p> -->
 
 <!-- Encadrer ceci -->
-<div id="synthesis-data">
+<div id="synthesis-data" class="bordered-content">
 	<p class="editable"><strong>Données importantes</strong><br/><br/>
 	<div class="clanInfoIds" ng-repeat="clanElem in vm.claninfo track by clanElem.name">
 	    <p><span class="synthesis-field">ID du clan {{clanElem.name}} ({{clanElem.membersNumber}} mb)</span> : <span class="synthesis-value">{{clanElem.id}}</span></p>
