Front : changement du logo, mep d'un background provisoire

--- a/app_client/common/directives/navigation/navigation.template.html
+++ b/app_client/common/directives/navigation/navigation.template.html
@@ -29,7 +29,7 @@
           <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img src="images/sangRoyaleTransp.png" alt="Sang Royale Website" style="max-width:100px; margin-top: -7px;">
+        <img src="images/sangnoir.png" alt="Sang Royale Website" style="max-width:100px; margin-top: -7px;">
       </a>
     </div>
   
