--- a/app_client/export/export.html
+++ b/app_client/export/export.html
@@ -5,7 +5,7 @@
 <p>Si un fichier doit être mis à jour, appuyez sur l'option "générer". Ceci prend environ une minute au maximum (laisser le navigateur tourner et vérifier que la date de dernière mise à jour a changé quand la minute est passée) </p>
 <b>Bonne utilisation! </b>
 
-<h1>Export des données pour l'activité des joueurs (cdc + dons)</h1>
+<h1>Export des données gdc (nouveau rapport :D) </h1>
   <div id="download-activity">
    <select ng-model="vm.selectedClan" ng-options="clan.name for clan in vm.sangRoyaleFamily"></select>
    <button ng-click="vm.downloadActivity()">Télécharger</button>
