--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  
+  <app-root>
+  	<p>App is loading</p>
+  </app-root>
+
 </body>
 </html>
